--- a/src/index.css
+++ b/src/index.css
@@ -88,3 +88,135 @@ code {
   width: 20px;
   border-radius: 20px; 
 } */
+
+
+
+
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
+}
+
+.posts-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: flex-start;
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
+
+.posts {
+  width: 50%;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-row-gap: 20px;
+}
+
+.posts-item {
+  border: 2px solid black;
+  border-radius: 3px;
+}
+
+.create-posts-letterbox {
+  background: #eeeeee;
+}
+
+.create-post-call-to-action {
+  border-top: 2px solid black;
+  border-bottom: 2px solid black;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.create-post-button-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.create-post-text {
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
+.posts-page-circle {
+  border: 2px solid black;
+  height: 20px;
+  width: 20px;
+  border-radius: 20px;
+}
+
+
+.name {
+  margin-top:20rem;
+}
+
+.register-email {
+  margin-top: 1rem;
+}
+
+
+.register-password {
+  margin-top: 1rem;
+}
+
+.confirm-password {
+  margin-top: 1rem;
+}
+
+.register-button {
+  display: block;
+   margin-top: 1rem;
+}
+
+/* .registerpipe{
+  background-color: red;
+}
+
+.loginpipe {
+  background-color: yellow;
+} */
+
+.pipes {
+  /* background-color: red; */
+  margin-top: 10rem;
+  margin-bottom: 1rem;
+  grid-row-start: 2;
+  grid-column-start: 2; 
+
+}
+
+.login-container {
+  display: grid;
+  grid-template-rows: 1fr 1fr 1fr;
+  grid-template-columns: 50px 1fr 1fr 50px;
+}
+
+.landing-image {
+  grid-row-start: 2;
+  grid-column-start: 2; 
+}
+
+.landing-register-login {
+  grid-row-start: 2;
+  grid-column-start: 3; 
+}
+
