--- a/src/index.css
+++ b/src/index.css
@@ -113,3 +113,28 @@ code {
   color: inherit;
 }
 
+.profile-container {
+  margin-top: 2em;
+  display: flex;
+  width: auto;
+}
+
+.profile-info {
+  margin-top: 10px;
+  margin-left: 10px;
+  width: 100%;
+}
+
+.profile-pic-info {
+  display: flex;
+}
+
+.name-add {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.display-posts-count {
+    pointer-events: none;
+}
